# org-mode

./: .gitignore  ChangeLog.md  README.md  README.org  cabal.project  flake.nix  org-mode.cabal  stack.yaml
.github/workflows/: ci.yaml
lib/Data/: Org.hs
nix/materializations/cabal/: default.nix
nix/materializations/ghcid/: default.nix
nix/materializations/hls-project/: default.nix
nix/materializations/hls-project/.plan.nix/: ghcide.nix
nix/materializations/hoogle/: default.nix
nix/materializations/hoogle/.plan.nix/: hoogle.nix
nix/materializations/org-modeProject/: default.nix
nix/materializations/org-modeProject/.plan.nix/: org-mode-lucid.nix  org-mode.nix
nix/materializations/retrie/: default.nix
nix/materializations/retrie/.plan.nix/: retrie.nix
org-mode/: CHANGELOG.md  LICENSE  README.md  org-mode.cabal
org-mode-lucid/: CHANGELOG.md  LICENSE  README.md  org-mode-lucid.cabal
org-mode-lucid/lib/Data/Org/: Lucid.hs
org-mode/lib/Data/: Org.hs
org-mode/test/: Test.hs  clocks.org  simple.org  test.org
test/: Test.hs  test.org
