cabal-version:      2.2
name:               org-mode
version:            1.0.0
description:        Parser for Emacs org-mode files.
homepage:           https://github.com/fosskers/org-mode
author:             Colin Woodbury
maintainer:         colin@fosskers.ca
copyright:          2020 Colin Woodbury
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

common commons
  default-language: Haskell2010
  ghc-options:
    -Wall -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities

  build-depends:
    , base  >=4.12 && <5
    , text

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules: Data.Org
  build-depends:   megaparsec ==7.*

test-suite org-mode-test
  import:         commons
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  org-mode
