cabal-version:      2.2
name:               org-mode-lucid
version:            1.6.2
synopsis:           Lucid integration for org-mode.
description:        Lucid integration for org-mode.
category:           Web
homepage:           https://github.com/fosskers/org-mode
author:             Colin Woodbury
maintainer:         colin@fosskers.ca
copyright:          2020 - 2021 Colin Woodbury
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md

common commons
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:
    -Wall -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities
    -funclutter-valid-hole-fits

  build-depends:
    , base        >=4.12 && <5
    , containers  >=0.6
    , hashable    >=1.2  && <1.4
    , lucid       >=2.9  && < 2.12
    , org-mode    ^>=2.0
    , text

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules: Data.Org.Lucid
