cabal-version:      2.2
name:               org-mode
version:            2.0.1
synopsis:           Parser for Emacs org-mode files.
description:        Parser for Emacs org-mode files.
category:           Data
homepage:           https://github.com/fosskers/org-mode
author:             Colin Woodbury
maintainer:         colin@fosskers.ca
copyright:          2020 - 2021 Colin Woodbury
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md
  test/simple.org
  test/test.org

common commons
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:
    -Wall -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities -funclutter-valid-hole-fits

  build-depends:
    , base        >=4.12 && <5
    , megaparsec  >=7    && <10
    , text

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules: Data.Org
  build-depends:
    , containers          >=0.6
    , filepath
    , hashable            >=1.2 && <1.4
    , parser-combinators  >=1.1 && <1.4
    , time                >=1.9

test-suite org-mode-test
  import:         commons
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , org-mode
    , tasty        >=1.2 && < 1.5
    , tasty-hunit  ^>=0.10
    , time         >=1.9
